# npns

./: Cargo.toml  README.md
.cargo/: config.toml
scripts/: start.zsh
src/: app.rs  fs.rs  fs_info.rs  main.rs  ui.rs
src/fs/: core.rs  duplicate_handler.rs  file_list.rs  history.rs  macros.rs  operations.rs
src/fs_info/: clipboard.rs  core.rs  duplicate_handler.rs  file_info.rs  file_list.rs  history.rs  operations.rs  state.rs
src/ui/: input.rs  screen.rs  tui.rs  widget.rs
src/ui/widget/: dialog.rs  file_list.rs  preview.rs  status.rs
