[package]
name = "npns"
version = "0.2.1"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
infer = "0.19.0"
serde = "1.0.228"
postcard = { version = "1.1.3", features = ["alloc"] }
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1 
strip = true
panic = "abort"
