cargo-features = ["panic-immediate-abort"]

[package]
name = "npns"
version = "0.4.2"
edition = "2024"

[dependencies]
serde = "1.0.228"
postcard = { version = "1.1.3", features = ["alloc"] }
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "immediate-abort"